# Matheolympiade-631011

./: .gitignore  Cargo.toml  README.md  plot.py  python-shell.nix  rust-shell.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: rust.yml
Calculator/: Cargo.toml
Calculator/src/: main.rs
Visualiser/: main.py  shell.nix
Visualizer/: main.py
src/: main.rs
