[package]
name = "matheolympiade-631011"
version = "0.9.0"
authors = ["Pascal Dietrich <pascal.1.dietrich@hotmail.com>"]
edition = "2021"
description = "Dieses Programm wurde zum Ausrechnen der Quersummen (f체r Teil a & b) und Darstellen der Anzahl der Quersummen in Abh채ngigkeit von s (f체r Teil b) der 1. Aufgabe, der 1. Runde, der 63. Mathematikolympiade f체r die 9.- und 10. Klasse benutzt."
repository = "https://github.com/Cameo007/Mathematikolympiade-631011"
license = "GPL-3.0"
keywords = ["command-line-utilities", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
plotlib = "0.5.1"
serde_json = "1.0"
